Pull request #557: mtokar-MCA-5050-improved-error-screen
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-5050-improved-error-screen to master

Squashed commit of the following:

commit 950737471802fa97ac42143e99368462dc25ec43
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 10:41:28 2026 +0100

    MCA-5152 Added KDOC

commit 958bfff8540afb465f1dff5d34014e510dddd597
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 09:34:42 2026 +0100

    MCA-5152 Review + fixes

commit fdc1351fc739900b649bde49f4a5531b97a628cd
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 08:46:57 2026 +0100

    MCA-5152 Review + fixes

commit 9f028c6c4853b5f570995c908da70c77d14610fc
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Dec 31 15:27:21 2025 +0100

    customization error view, new connection banner

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hans/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hans/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">您可以在应用设置中授予权限</string>
     <string name="ib_chat_cant_create_attachment">无法由选择的文件创建附件</string>
     <string name="ib_chat_ok">好的</string>
-    <string name="ib_chat_error">出现错误：%1$s.</string>
+    <string name="ib_chat_error">出现错误</string>
     <string name="ib_chat_error_code">错误代码：%1$s.</string>
     <string name="ib_chat_save">节省</string>
     <string name="ib_chat_attachments_take_a_photo">拍照</string>
     <string name="ib_chat_attachments_record_video">记录视频</string>
     <string name="ib_chat_attachments_select_file">选择文件</string>
     <string name="ib_chat_attachments_select_from_gallery">从画廊中选择</string>
+    <string name="ib_chat_error_description">请稍后重试或联系客户支持。</string>
+    <string name="ib_chat_refresh">刷新</string>
 </resources>
