--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">Možete ih odobriti u postavkama aplikacije.</string>
     <string name="ib_chat_cant_create_attachment">Nije moguće kreirati prilog iz odabrane datoteke</string>
     <string name="ib_chat_ok">Uredu</string>
-    <string name="ib_chat_error">Nešto nije u redu: %1$s.</string>
+    <string name="ib_chat_error">Nešto nije u redu</string>
     <string name="ib_chat_error_code">Kôd greške: %1$s.</string>
     <string name="ib_chat_save">Sačuvaj</string>
     <string name="ib_chat_attachments_take_a_photo">Fotografirajte</string>
     <string name="ib_chat_attachments_record_video">Snimi video</string>
     <string name="ib_chat_attachments_select_file">Odaberite datoteku</string>
     <string name="ib_chat_attachments_select_from_gallery">Odaberite iz galerije</string>
+    <string name="ib_chat_error_description">Pokušajte ponovo kasnije ili kontaktirajte podršku za korisnike.</string>
+    <string name="ib_chat_refresh">Osvežite</string>
 </resources>
