--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">إرسل رسالة</string>
     <string name="ib_chat_cant_create_attachment">لا يمكن إنشاء مرفق من الملف المختار</string>
     <string name="ib_chat_ok">نعم</string>
-    <string name="ib_chat_error">حدث خطأ ما: %1$s.</string>
+    <string name="ib_chat_error">حدث خطأ ما</string>
     <string name="ib_chat_error_code">رمز الخطأ: %1$s.</string>
     <string name="ib_chat_save">يحفظ</string>
     <string name="ib_chat_attachments_take_a_photo">التقط صورة</string>
     <string name="ib_chat_attachments_record_video">تسجيل الفيديو</string>
     <string name="ib_chat_attachments_select_file">حدد الملف</string>
     <string name="ib_chat_attachments_select_from_gallery">اختر من المعرض</string>
+    <string name="ib_chat_error_description">حاول مرة أخرى لاحقاً أو اتصل بدعم العملاء.</string>
+    <string name="ib_chat_refresh">تحديث</string>
 </resources>
