--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hant/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hant/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">發送訊息…</string>
     <string name="ib_chat_cant_create_attachment">無法從所選文件創建附件</string>
     <string name="ib_chat_ok">好的</string>
-    <string name="ib_chat_error">出了點問題：%1$s.</string>
+    <string name="ib_chat_error">出了點問題</string>
     <string name="ib_chat_error_code">錯誤代碼：%1$s.</string>
     <string name="ib_chat_save">儲存</string>
     <string name="ib_chat_attachments_take_a_photo">拍照</string>
     <string name="ib_chat_attachments_record_video">錄製影片</string>
     <string name="ib_chat_attachments_select_file">選擇檔案</string>
     <string name="ib_chat_attachments_select_from_gallery">從相簿中選擇</string>
+    <string name="ib_chat_error_description">請稍後重試或聯絡客戶支援。</string>
+    <string name="ib_chat_refresh">重新整理</string>
 </resources>
