--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">Nachricht senden...</string>
     <string name="ib_chat_cant_create_attachment">Aus der ausgewählten Datei kann kein Anhang erstellt werden</string>
     <string name="ib_chat_ok">OK</string>
-    <string name="ib_chat_error">Es ist ein Fehler aufgetreten: %1$s.</string>
+    <string name="ib_chat_error">Es ist ein Fehler aufgetreten</string>
     <string name="ib_chat_error_code">Fehlercode: %1$s.</string>
     <string name="ib_chat_save">Speichern</string>
     <string name="ib_chat_attachments_take_a_photo">Machen Sie ein Foto</string>
     <string name="ib_chat_attachments_record_video">Video aufnehmen</string>
     <string name="ib_chat_attachments_select_file">Datei auswählen</string>
     <string name="ib_chat_attachments_select_from_gallery">Wählen Sie aus der Galerie</string>
+    <string name="ib_chat_error_description">Versuchen Sie es später erneut oder kontaktieren Sie den Kundensupport.</string>
+    <string name="ib_chat_refresh">Aktualisieren</string>
 </resources>
