--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">Enviar un mensaje...</string>
     <string name="ib_chat_cant_create_attachment">No se puede crear un archivo adjunto desde el archivo seleccionado</string>
     <string name="ib_chat_ok">DE ACUERDO</string>
-    <string name="ib_chat_error">Algo salió mal: %1$s.</string>
+    <string name="ib_chat_error">Algo salió mal</string>
     <string name="ib_chat_error_code">Código de error: %1$s.</string>
     <string name="ib_chat_save">Ahorrar</string>
     <string name="ib_chat_attachments_take_a_photo">Tomar una foto</string>
     <string name="ib_chat_attachments_record_video">Grabar video</string>
     <string name="ib_chat_attachments_select_file">Seleccionar archivo</string>
     <string name="ib_chat_attachments_select_from_gallery">Seleccionar de la galería</string>
+    <string name="ib_chat_error_description">Inténtelo de nuevo más tarde o póngase en contacto con el servicio de atención al cliente.</string>
+    <string name="ib_chat_refresh">Actualizar</string>
 </resources>
