--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">Üzenetet küldeni</string>
     <string name="ib_chat_cant_create_attachment">Nem lehet mellékletet létrehozni a kiválasztott fájlból</string>
     <string name="ib_chat_ok">Rendben</string>
-    <string name="ib_chat_error">Hiba történt: %1$s.</string>
+    <string name="ib_chat_error">Hiba történt</string>
     <string name="ib_chat_error_code">Hibakód: %1$s.</string>
     <string name="ib_chat_save">Megment</string>
     <string name="ib_chat_attachments_take_a_photo">Fotózni</string>
     <string name="ib_chat_attachments_record_video">Videót rögzíteni</string>
     <string name="ib_chat_attachments_select_file">Válasszon fájlt</string>
     <string name="ib_chat_attachments_select_from_gallery">Válasszon a galériából</string>
+    <string name="ib_chat_error_description">Próbálja meg később, vagy lépjen kapcsolatba az ügyfélszolgálattal.</string>
+    <string name="ib_chat_refresh">Frissítés</string>
 </resources>
