--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">Mandare un messaggio…</string>
     <string name="ib_chat_cant_create_attachment">Impossibile creare allegato dal file selezionato</string>
     <string name="ib_chat_ok">OK</string>
-    <string name="ib_chat_error">Ada yang tidak bere: %1$s.</string>
+    <string name="ib_chat_error">Ada yang tidak bere</string>
     <string name="ib_chat_error_code">Codice errore: %1$s.</string>
     <string name="ib_chat_save">Salva</string>
     <string name="ib_chat_attachments_take_a_photo">Scattare una foto</string>
     <string name="ib_chat_attachments_record_video">Registra video</string>
     <string name="ib_chat_attachments_select_file">Seleziona file</string>
     <string name="ib_chat_attachments_select_from_gallery">Seleziona dalla galleria</string>
+    <string name="ib_chat_error_description">Riprova più tardi o contatta il supporto clienti.</string>
+    <string name="ib_chat_refresh">Aggiorna</string>
 </resources>
