--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">אתה יכול להעניק להם הגדרות יישום.</string>
     <string name="ib_chat_cant_create_attachment">לא ניתן ליצור קובץ מצורף מהקובץ שנבחר</string>
     <string name="ib_chat_ok">בסדר</string>
-    <string name="ib_chat_error">משהו השתבש: %1$s.</string>
+    <string name="ib_chat_error">משהו השתבש</string>
     <string name="ib_chat_error_code">קוד שגיאה: %1$s.</string>
     <string name="ib_chat_save">להציל</string>
     <string name="ib_chat_attachments_take_a_photo">צלם תמונה</string>
     <string name="ib_chat_attachments_record_video">הקלט וידאו</string>
     <string name="ib_chat_attachments_select_file">בחר קובץ</string>
     <string name="ib_chat_attachments_select_from_gallery">בחר מהגלריה</string>
+    <string name="ib_chat_error_description">נסה שוב מאוחר יותר או צור קשר עם תמיכת הלקוחות.</string>
+    <string name="ib_chat_refresh">רענן</string>
 </resources>
