--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">Galite juos suteikti programos nustatymuose.</string>
     <string name="ib_chat_cant_create_attachment">Negalima sukurti priedo iš pasirinkto failo</string>
     <string name="ib_chat_ok">Gerai</string>
-    <string name="ib_chat_error">Kažkas ne taip: %1$s.</string>
+    <string name="ib_chat_error">Kažkas ne taip</string>
     <string name="ib_chat_error_code">Klaidos kodas: %1$s.</string>
     <string name="ib_chat_save">Sutaupyti</string>
     <string name="ib_chat_attachments_take_a_photo">Nufotografuoti</string>
     <string name="ib_chat_attachments_record_video">įrašyti vaizdo įrašą</string>
     <string name="ib_chat_attachments_select_file">pasirinkti failą</string>
     <string name="ib_chat_attachments_select_from_gallery">pasirinkti iš galerijos</string>
+    <string name="ib_chat_error_description">Bandykite vėliau arba susisiekite su klientų pagalba.</string>
+    <string name="ib_chat_refresh">Atnaujinti</string>
 </resources>
