--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">Anda boleh memberikannya dalam tetapan aplikasi.</string>
     <string name="ib_chat_cant_create_attachment">Tidak boleh membuat lampiran daripada fail yang dipilih</string>
     <string name="ib_chat_ok">Okey</string>
-    <string name="ib_chat_error">Sesuatu telah berlaku: %1$s.</string>
+    <string name="ib_chat_error">Sesuatu telah berlaku</string>
     <string name="ib_chat_error_code">Kod ralat: %1$s.</string>
     <string name="ib_chat_save">Jimat</string>
     <string name="ib_chat_attachments_take_a_photo">Ambil gambar</string>
     <string name="ib_chat_attachments_record_video">Rakam video</string>
     <string name="ib_chat_attachments_select_file">Pilih fail</string>
     <string name="ib_chat_attachments_select_from_gallery">Pilih daripada galeri</string>
+    <string name="ib_chat_error_description">Cuba lagi nanti atau hubungi sokongan pelanggan.</string>
+    <string name="ib_chat_refresh">Segarkan</string>
 </resources>
