--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">Trimite un mesaj...</string>
     <string name="ib_chat_cant_create_attachment">Nu se poate crea atașament din fișierul selectat</string>
     <string name="ib_chat_ok">Bine</string>
-    <string name="ib_chat_error">A apărut o eroare: %1$s.</string>
+    <string name="ib_chat_error">A apărut o eroare</string>
     <string name="ib_chat_error_code">Cod de eroare: %1$s.</string>
     <string name="ib_chat_save">Salvați</string>
     <string name="ib_chat_attachments_take_a_photo">Faceți o fotografie</string>
     <string name="ib_chat_attachments_record_video">Înregistrați videoclipuri</string>
     <string name="ib_chat_attachments_select_file">Selectați fișier</string>
     <string name="ib_chat_attachments_select_from_gallery">Selectați din galerie</string>
+    <string name="ib_chat_error_description">Încercați din nou mai târziu sau contactați asistența pentru clienți.</string>
+    <string name="ib_chat_refresh">Reîmprospătare</string>
 </resources>
