--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">Možete dobiti u podešavanju aplikacije</string>
     <string name="ib_chat_cant_create_attachment">Ne može se kreirati prilog iz odabranog fajla</string>
     <string name="ib_chat_ok">U redu</string>
-    <string name="ib_chat_error">Nešto je krenulo pogrešno:  %1$s.</string>
+    <string name="ib_chat_error">Nešto je krenulo pogrešno</string>
     <string name="ib_chat_error_code">Код грешке: %1$с.</string>
     <string name="ib_chat_save">сачувати</string>
     <string name="ib_chat_attachments_take_a_photo">Фотографисати</string>
     <string name="ib_chat_attachments_record_video">Сними видео</string>
     <string name="ib_chat_attachments_select_file">Изаберите датотеку</string>
     <string name="ib_chat_attachments_select_from_gallery">Изаберите из галерије</string>
+    <string name="ib_chat_error_description">Pokušajte ponovo kasnije ili kontaktirajte podršku za korisnike.</string>
+    <string name="ib_chat_refresh">Osvežavanje</string>
 </resources>
