--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_message_hint">ส่งข้อความ</string>
     <string name="ib_chat_cant_create_attachment">สร้างไฟล์แนบจากไฟล์ที่เลือกไม่ได้</string>
     <string name="ib_chat_ok">ตกลง</string>
-    <string name="ib_chat_error">มีข้อผิดพลาดเกิดขึ้น: %1$s.</string>
+    <string name="ib_chat_error">มีข้อผิดพลาดเกิดขึ้น</string>
     <string name="ib_chat_error_code">รหัสข้อผิดพลาด: %1$s.</string>
     <string name="ib_chat_save">บันทึก</string>
     <string name="ib_chat_attachments_take_a_photo">ถ่ายรูป</string>
     <string name="ib_chat_attachments_record_video">บันทึกวิดีโอ</string>
     <string name="ib_chat_attachments_select_file">เลือกไฟล์</string>
     <string name="ib_chat_attachments_select_from_gallery">เลือกจากแกลเลอรี่</string>
+    <string name="ib_chat_error_description">ลองใหม่อีกครั้งในภายหลังหรือติดต่อฝ่ายสนับสนุนลูกค้า</string>
+    <string name="ib_chat_refresh">รีเฟรช</string>
 </resources>
