--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_iv_input_border_desc">Верхня межа</string>
     <string name="ib_chat_cant_create_attachment">Неможливо створити вкладення з вибраного файлу</string>
     <string name="ib_chat_ok">в порядку</string>
-    <string name="ib_chat_error">Щось пішло не так: %1$s.</string>
+    <string name="ib_chat_error">Щось пішло не так</string>
     <string name="ib_chat_error_code">Код помилки: %1$s.</string>
     <string name="ib_chat_save">зберегти</string>
     <string name="ib_chat_attachments_take_a_photo">Сфотографувати</string>
     <string name="ib_chat_attachments_record_video">Запишіть відео</string>
     <string name="ib_chat_attachments_select_file">Виберіть Файл</string>
     <string name="ib_chat_attachments_select_from_gallery">Виберіть з галереї</string>
+    <string name="ib_chat_error_description">Спробуйте ще раз пізніше або зв\'яжіться зі службою підтримки клієнтів.</string>
+    <string name="ib_chat_refresh">Оновити</string>
 </resources>
