--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
@@ -17,11 +17,13 @@
     <string name="ib_chat_permissions_not_granted_message">Bạn có thể cấp chúng trong cài đặt ứng dụng.</string>
     <string name="ib_chat_cant_create_attachment">Không thể tạo tệp đính kèm từ tệp đã chọn</string>
     <string name="ib_chat_ok">ĐƯỢC RỒI</string>
-    <string name="ib_chat_error">Đã xảy ra lỗi: %1$s.</string>
+    <string name="ib_chat_error">Đã xảy ra lỗi</string>
     <string name="ib_chat_error_code">Mã lỗi: %1$s.</string>
     <string name="ib_chat_save">Cứu</string>
     <string name="ib_chat_attachments_take_a_photo">Chụp ảnh</string>
     <string name="ib_chat_attachments_record_video">Ghi lại video</string>
     <string name="ib_chat_attachments_select_file">Chọn Tệp</string>
     <string name="ib_chat_attachments_select_from_gallery">Chọn từ bộ sưu tập</string>
+    <string name="ib_chat_error_description">Vui lòng thử lại sau hoặc liên hệ với bộ phận hỗ trợ khách hàng.</string>
+    <string name="ib_chat_refresh">Làm mới</string>
 </resources>
